--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Lab 1 - EECE.4860/5860 at UMass Lowell\n",
     "\n",
-    "This lab requires you to practice with LLMs on Intel Tiber AI cloud, such as how to load LLM models by utilizing Hugging Face, change model settings, make queries, and generate required outputs through prompt engineering. Students in EECE.5860 will practice how to finetune an LLM using a new dataset.\n",
+    "This lab requires you to practice with LLMs, such as how to load LLM models by utilizing Hugging Face, change model settings, make queries, and generate required outputs through prompt engineering. Students in EECE.5860 will practice how to finetune an LLM using a new dataset.\n",
     "\n",
     "## **Note** This lab has three parts. Part 1 and Part 2 are for all the students. Part 3 contains additional requirements for EECE.5860 students. EECE.4860 students do not need to complete Part 3.\n",
     "\n",
