--- a/gemma_finetuning.ipynb
+++ b/gemma_finetuning.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "In this notebook, you will learn how to fine-tune a large language model (Google's Gemma) for a specific task. The notebook covers the following key points:\n",
     "\n",
-    "1. Setting up the environment and optimizing it for Intel GPUs\n",
+    "1. Setting up the environment\n",
     "2. Initializing the GPU and configuring LoRA settings for efficient fine-tuning\n",
     "3. Loading the pre-trained Gemma model and testing its performance\n",
     "4. Preparing a diverse dataset of question-answer pairs covering various domains\n",
@@ -618,14 +618,7 @@
     "\n",
     "If you encounter any issues or have suggestions for improvement, please don't hesitate to reach out and provide feedback. We value your input and are committed to making this notebook and the finetuning process as smooth and enjoyable as possible.\n",
     "\n",
-    "So go ahead, unleash your creativity, and embark on an exciting finetuning journey with the Gemma model and Intel's powerful Max Series GPUs and (Xeon Scalable CPUs too)! The possibilities are endless, and we can't wait to see what you'll create. Happy finetuning! 🚀✨\n",
-    "\n",
-    "To dive even deeper into the exciting world of generative AI on Intel GPUs, be sure to check out our genAI repository on GitHub. There you'll find additional notebooks covering topics like:\n",
-    "\n",
-    "- Text-to-Image with Stable Diffusion\n",
-    "- Image-to-Image with Stable Diffusion\n",
-    "- Simple LLM Inference: Playing with Language Models\n",
-    "- And more!\n",
+    "So go ahead, unleash your creativity, and embark on an exciting finetuning journey with the Gemma model! The possibilities are endless, and we can't wait to see what you'll create. Happy finetuning! 🚀✨\n",
     "\n",
     "Feel free to explore, run, and modify these notebooks to further expand your understanding and spark new ideas. If you have any questions, encounter issues, or have suggestions for improvement, please don't hesitate to open an issue on the GitHub repository. We greatly value your feedback and contributions to make this resource even better.\n",
     "\n",
@@ -643,8 +636,6 @@
     "#### References and Resources 📚\n",
     "\n",
     "- Google's Gemma Model: [Model Card](https://huggingface.co/google/gemma-2b)\n",
-    "- Intel Max Series GPUs: [Product Page](https://www.intel.com/content/www/us/en/products/details/discrete-gpus/data-center-gpu/max-series.html)\n",
-    "- Intel Extension for PyTorch: [Github link](https://github.com/intel/intel-extension-for-pytorch)\n",
     "- Hugging Face Transformers: [Documentation](https://huggingface.co/docs/transformers/index)\n",
     "- LoRA: [Paper](https://arxiv.org/abs/2106.09685)\n",
     "- Weights & Biases: [Website](https://wandb.ai/)\n",
@@ -656,13 +647,7 @@
     "\n",
     "Please be aware that while Large Language Models like Camel-5B and OpenLLaMA 3b v2 are powerful tools for text generation, they may sometimes produce results that are unexpected, biased, or inconsistent with the given prompt. It's advisable to carefully review the generated text and consider the context and application in which you are using these models.\n",
     "\n",
-    "Usage of these models must also adhere to the licensing agreements and be in accordance with ethical guidelines and best practices for AI. If you have any concerns or encounter issues with the models, please refer to the respective model cards and documentation provided in the links above.\n",
-    "\n",
-    "To the extent that any public or non-Intel datasets or models are referenced by or accessed using these materials those datasets or models are provided by the third party indicated as the content source. Intel does not create the content and does not warrant its accuracy or quality. By accessing the public content, or using materials trained on or with such content, you agree to the terms associated with that content and that your use complies with the applicable license.\n",
-    "\n",
-    "Intel expressly disclaims the accuracy, adequacy, or completeness of any such public content, and is not liable for any errors, omissions, or defects in the content, or for any reliance on the content. Intel is not liable for any liability or damages relating to your use of public content.\n",
-    "\n",
-    "Intel’s provision of these resources does not expand or otherwise alter Intel’s applicable published warranties or warranty disclaimers for Intel products or solutions, and no additional obligations, indemnifications, or liabilities arise from Intel providing such resources. Intel reserves the right, without notice, to make corrections, enhancements, improvements, and other changes to its materials."
+    "Usage of these models must also adhere to the licensing agreements and be in accordance with ethical guidelines and best practices for AI. If you have any concerns or encounter issues with the models, please refer to the respective model cards and documentation provided in the links above."
    ]
   }
  ],
