--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Simple LLM Inference: Playing with Language Models on Intel® Data Center Max Series GPUs**"
+    "**Simple LLM Inference: Playing with Language Models**"
    ]
   },
   {
@@ -168,7 +168,7 @@
     "\n",
     "- **Class Definition**: The `ChatBotModel` class is the core of our text generation. It handles the setup, optimization, and interaction with the LLM (Large Language Model).\n",
     "\n",
-    "- **Initialization**: When you create an instance of this class, you can specify the model's path, the device to run on (defaulting to Intel's \"cuda\" device if available), and the data type.\n",
+    "- **Initialization**: When you create an instance of this class, you can specify the model's path, the device to run on (defaulting to the \"cuda\" device if available), and the data type.\n",
     "\n",
     "- **Input Preparation**: The `prepare_input` method ensures that the input doesn't exceed the maximum length and combines the previous text with the user input, if required.\n",
     "\n",
@@ -178,7 +178,7 @@
     "\n",
     "- **Text Processing**: Several methods like `unique_sentences`, `remove_repetitions`, and `extract_bot_response` handle the text processing to ensure the generated text is readable and free from repetitions or unnecessary echoes.\n",
     "\n",
-    "Feel free to explore the code and play around with different parameters. Remember, this is a simple and interactive way to experiment with text generation. It's not a cutting-edge chatbot, but rather a playful tool to engage with language models. Enjoy the journey into the world of LLMs, using Intel® Data Center GPU Max 1100s!\n"
+    "Feel free to explore the code and play around with different parameters. Remember, this is a simple and interactive way to experiment with text generation. It's not a cutting-edge chatbot, but rather a playful tool to engage with language models. Enjoy the journey into the world of LLMs!\n"
    ]
   },
   {
@@ -539,7 +539,7 @@
     "- **Number of Beams**: Control the breadth of the search in text generation.\n",
     "- **Repetition Penalty**: Modify this to prevent or allow repeated phrases and sentences.\n",
     "\n",
-    "Once you've set your preferences, you can start the interaction and even reset or reload the model to try different settings. Let's set this up and explore the playful world of text generation using Intel® Data Center GPU Max 1100s!\n",
+    "Once you've set your preferences, you can start the interaction and even reset or reload the model to try different settings. Let's set this up and explore the playful world of text generation!\n",
     "\n"
    ]
   },
@@ -765,14 +765,7 @@
     "\n",
     "Please be aware that while Large Language Models like Camel-5B and OpenLLaMA 3b v2 are powerful tools for text generation, they may sometimes produce results that are unexpected, biased, or inconsistent with the given prompt. It's advisable to carefully review the generated text and consider the context and application in which you are using these models.\n",
     "\n",
-    "Usage of these models must also adhere to the licensing agreements and be in accordance with ethical guidelines and best practices for AI. If you have any concerns or encounter issues with the models, please refer to the respective model cards and documentation provided in the links above.\n",
-    "\n",
-    "To the extent that any public or non-Intel datasets or models are referenced by or accessed using these materials those datasets or models are provided by the third party indicated as the content source. Intel does not create the content and does not warrant its accuracy or quality. By accessing the public content, or using materials trained on or with such content, you agree to the terms associated with that content and that your use complies with the applicable license.\n",
-    "\n",
-    " \n",
-    "Intel expressly disclaims the accuracy, adequacy, or completeness of any such public content, and is not liable for any errors, omissions, or defects in the content, or for any reliance on the content. Intel is not liable for any liability or damages relating to your use of public content.\n",
-    "\n",
-    "Intel’s provision of these resources does not expand or otherwise alter Intel’s applicable published warranties or warranty disclaimers for Intel products or solutions, and no additional obligations, indemnifications, or liabilities arise from Intel providing such resources. Intel reserves the right, without notice, to make corrections, enhancements, improvements, and other changes to its materials.\n"
+    "Usage of these models must also adhere to the licensing agreements and be in accordance with ethical guidelines and best practices for AI. If you have any concerns or encounter issues with the models, please refer to the respective model cards and documentation provided in the links above."
    ]
   }
  ],
