--- a/simple_rag.ipynb
+++ b/simple_rag.ipynb
@@ -16,10 +16,10 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "## Retrieval Augmented Generation (RAG) with Hugging Face Transformers on Intel® Data Center GPU\n",
+    "## Retrieval Augmented Generation (RAG) with Hugging Face Transformers\n",
     "\n",
     "#### 1. Retrieval Augmented Generation (RAG):\n",
-    "Retrieval Augmented Generation (RAG) is a novel approach that combines the strengths of large-scale retrieval systems with the generative capabilities of transformer models like Falcon. In our RAG-based system, implemented on Intel® Data Center GPU Max Series 1100, when a question is posed, relevant documents or passages are retrieved from a corpus, and then fed alongside the query to the language model. This two-step process enables the model to leverage both external knowledge from the corpus and its internal knowledge to produce more informed and contextually accurate responses.\n",
+    "Retrieval Augmented Generation (RAG) is a novel approach that combines the strengths of large-scale retrieval systems with the generative capabilities of transformer models like Falcon. In our RAG-based system, when a question is posed, relevant documents or passages are retrieved from a corpus, and then fed alongside the query to the language model. This two-step process enables the model to leverage both external knowledge from the corpus and its internal knowledge to produce more informed and contextually accurate responses.\n",
     "\n",
     "#### 2. In-context Learning:\n",
     "Traditional machine learning models learn from extensive labeled datasets. In contrast, in-context learning pertains to models, especially language models, leveraging a few examples or context provided at inference time to tailor their outputs. Our implementation with Falcon3-1B-Instruct demonstrates this capability through efficient context processing using the Transformers pipeline.\n",
@@ -28,7 +28,7 @@
     "LLM chains or pipelines involve stringing together multiple stages or components of a system to achieve a complex task. In our RAG system, the pipeline includes a vector database for efficient retrieval, followed by the Hugging Face Transformers pipeline for response generation. This modular approach allows for easy optimization and updates to individual components.\n",
     "\n",
     "#### 4. RAG for On-Premise LLM Applications:\n",
-    "With the growing need for data privacy and proprietary data handling, many enterprises seek solutions to harness the power of LLMs in-house. Our implementation, leveraging Intel's GPU infrastructure, demonstrates how RAG can be deployed effectively on-premise. By integrating RAG with local data repositories and utilizing hardware acceleration, enterprises can build powerful LLM applications tailored to their specific needs while ensuring data confidentiality.\n",
+    "With the growing need for data privacy and proprietary data handling, many enterprises seek solutions to harness the power of LLMs in-house. Our implementation, demonstrates how RAG can be deployed effectively on-premise. By integrating RAG with local data repositories and utilizing hardware acceleration, enterprises can build powerful LLM applications tailored to their specific needs while ensuring data confidentiality.\n",
     "\n",
     "#### 5. RAG vs Fine-Tuning:\n",
     "While RAG is a powerful approach on its own, it can also be combined with different model architectures to enhance LLM capabilities. Our implementation focuses on using RAG with the Falcon3-1B-Instruct model, demonstrating how external knowledge retrieval can complement the model's built-in capabilities. This approach allows for dynamic knowledge integration without the need for continuous model retraining."
@@ -69,7 +69,7 @@
    "id": "5",
    "metadata": {},
    "source": [
-    "The code below builds RAGBot. RAGBot class is a streamlined implementation of a Retrieval-Augmented Generation (RAG) chatbot, designed to integrate large language models for generating contextually relevant responses. At its core, it manages the downloading and initialization of HuggingFace Transformer models, such as the \"Falcon3-1B-Instruct\" model, with support for handling large model files. Running on Intel® Data Center GPU Max Series 1100, the system leverages hardware acceleration for efficient model inference. It automates the process of fetching and structuring dialogue datasets from predefined sources. The chatbot utilizes the HuggingFace Transformers library, allowing for efficient model inference with adjustable parameters like the number of threads and maximum tokens. A key feature of RAGBot is its ability to build a vector database for text retrieval, significantly bolstering its ability to pull relevant document snippets based on user queries. This functionality, combined with a retrieval mechanism and an inference method using the Transformers pipeline, makes RAGBot a simple tool for developers aiming to learn about RAG and leverage this implementation as a basis for their implementation."
+    "The code below builds RAGBot. RAGBot class is a streamlined implementation of a Retrieval-Augmented Generation (RAG) chatbot, designed to integrate large language models for generating contextually relevant responses. At its core, it manages the downloading and initialization of HuggingFace Transformer models, such as the \"Falcon3-1B-Instruct\" model, with support for handling large model files. The system leverages hardware acceleration for efficient model inference. It automates the process of fetching and structuring dialogue datasets from predefined sources. The chatbot utilizes the HuggingFace Transformers library, allowing for efficient model inference with adjustable parameters like the number of threads and maximum tokens. A key feature of RAGBot is its ability to build a vector database for text retrieval, significantly bolstering its ability to pull relevant document snippets based on user queries. This functionality, combined with a retrieval mechanism and an inference method using the Transformers pipeline, makes RAGBot a simple tool for developers aiming to learn about RAG and leverage this implementation as a basis for their implementation."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "source": [
     "### RAGBot Class Implementation\n",
     "\n",
-    "The RAGBot class implements a Retrieval-Augmented Generation system optimized for Intel® Data Center GPU Max Series 1100. Key components include:\n",
+    "The RAGBot class implements a Retrieval-Augmented Generation system. Key components include:\n",
     "\n",
     "#### Core Features\n",
     "- Model Management: Handles initialization of Hugging Face Transformer models (currently supporting Falcon3-1B-Instruct)\n",
@@ -519,14 +519,7 @@
     "\n",
     "Please be aware that while Large Language Models like Falcon are powerful tools for text generation, they may sometimes produce results that are unexpected, biased, or inconsistent with the given prompt. It's advisable to carefully review the generated text and consider the context and application in which you are using these models.\n",
     "\n",
-    "Usage of these models must also adhere to the licensing agreements and be in accordance with ethical guidelines and best practices for AI. If you have any concerns or encounter issues with the models, please refer to the respective model cards and documentation provided in the links above.\n",
-    "\n",
-    "To the extent that any public or non-Intel datasets or models are referenced by or accessed using these materials those datasets or models are provided by the third party indicated as the content source. Intel does not create the content and does not warrant its accuracy or quality. By accessing the public content, or using materials trained on or with such content, you agree to the terms associated with that content and that your use complies with the applicable license.\n",
-    "\n",
-    " \n",
-    "Intel expressly disclaims the accuracy, adequacy, or completeness of any such public content, and is not liable for any errors, omissions, or defects in the content, or for any reliance on the content. Intel is not liable for any liability or damages relating to your use of public content.\n",
-    "\n",
-    "Intel’s provision of these resources does not expand or otherwise alter Intel’s applicable published warranties or warranty disclaimers for Intel products or solutions, and no additional obligations, indemnifications, or liabilities arise from Intel providing such resources. Intel reserves the right, without notice, to make corrections, enhancements, improvements, and other changes to its materials."
+    "Usage of these models must also adhere to the licensing agreements and be in accordance with ethical guidelines and best practices for AI. If you have any concerns or encounter issues with the models, please refer to the respective model cards and documentation provided in the links above."
    ]
   }
  ],
