--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "Have you ever wanted to convert a description or phrase into an image? With Text-to-Image Stable Diffusion, you can do just that. Input a description like \"a quiet sunset over the ocean\" or \"a cityscape at night,\" and see it translated into a visual representation.\n",
     "\n",
-    "This notebook is powered by Intel® Data Center GPU Max Series and will walk you through examples, help you understand the outputs, and give pointers on how to get the best results. No technical deep dives, just clear steps and explanations.\n",
+    "This notebook will walk you through examples, help you understand the outputs, and give pointers on how to get the best results. No technical deep dives, just clear steps and explanations.\n",
     "\n",
     "Ready to turn your words into visuals?, Let's get started!"
    ]
