Added do_sample=True parameter to model.generate()

--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -332,6 +332,7 @@
     "                    top_k=top_k,\n",
     "                    num_beams=num_beams,\n",
     "                    repetition_penalty=repetition_penalty,\n",
+    "                    do_sample=True,\n",
     "                )\n",
     "                return output\n",
     "\n",
